--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>About</nav>
      <button class="rror"> <a href="service.html">Services</a></button>
         <nav>Portfolio</nav>
-        <nav>Page</nav>
-        <nav>Contect</nav>
+        <button class="rror"><a href="https://www.facebook.com/jsfrequency">Page</a></button>
+     <button class="rror"><a href="conect.html">Contract</a></button>
         <button class="sara">Get free consultant</button>
     </div>
  </header>
